--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
             <div class="mb-4 card-item" data-risco-id="123">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Título do Risco (vindo do backend)</h5>
+                        <h5 class="card-title">Título do Risco </h5>
                         <p class="card-text">Pequena descrição do risco (vindo do backend)...</p>
                         <button class="btn btn-warning btn-ver-mais" data-bs-toggle="modal" data-bs-target="#detalhesRiscoModal" data-risco-id="123">Ver mais</button>
                     </div>
