--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -6,7 +6,7 @@
     <span id="closeModal" class="close">&times;</span>
     <h2>Cadastrar Novo Erro</h2>
 
-    <form action="" method="POST">
+    <form action="{{url_for('novo_problema')}}" method="POST">
       <div class="form-group">
         <label for="titulo">Título:</label>
         <input type="text" id="titulo" name="titulo" required>
@@ -25,11 +25,6 @@
       <div class="form-group">
         <label for="evitar">Como evitar:</label>
         <textarea id="evitar" name="evitar"></textarea>
-      </div>
-
-      <div class="form-group">
-        <label for="imagem">URL da Imagem:</label>
-        <input type="text" id="imagem" name="imagem">
       </div>
 
       <div class="form-group">
