--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -4,7 +4,7 @@
 <div id="modal" class="modal">
   <div class="modal-content">
     <span id="closeModal" class="close">&times;</span>
-    <h2>Cadastrar Novo Erro</h2>
+    <h2>Cadastrar Problema</h2>
 
     <form action="{{url_for('novo_problema')}}" method="POST">
       <div class="form-group">
