--- a/templates/base.html
+++ b/templates/base.html
@@ -14,20 +14,20 @@
     </style>
 </head>
 <body>
-    <header class="bg-light py-4">
-        <div class="bg-body-tertiary py-3">
+    <header class="py-4">
+        <div class="">
             <div class="container-fluid">
                 <form class="d-flex mx-auto w-100" role="search" style="max-width: 600px;">
                     <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Buscar">
-                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                    <button class="btn btn-outline-dark" type="submit">Buscar</button>
                 </form>
             </div>
         </div>
     </header>
 
     <div class="d-flex" id="main-container">
-        <nav class="bg-light p-3" style="width: 250px;">
-            <button id="openModal" class="btn btn-danger w-100" >Adicionar Erro</button>
+        <nav class="p-3">
+            <button id="openModal" class="btn btn-secondary w-100" >Adicionar Erro </button>
         </nav>
         
         <main class="container mt-4">
