--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,43 +1,100 @@
 body {
     display: flex;
-    flex-direction: column; /* Header acima do main-container */
-    min-height: 100vh;
+    background-color: #2c2f33; 
+    color: #e0e0e0; 
 }
 
 header {
+    background-color: #3a3d41; 
+    z-index: 1;
+    position: fixed;
     width: 100%;
+    color: #f1f1f1;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
 }
 
 #main-container {
     display: flex;
-    flex-direction: row; /* Menu e conteúdo lado a lado */
-    flex-grow: 1; /* Ocupa o espaço restante após o header */
+    flex-grow: 1;
 }
 
 nav {
-    width: 250px;
-    flex-shrink: 0;
+    margin-top: 86px;
+    position: fixed;
+    width: 200px;
+    z-index: 1;
+    background-color: #3a3d41;
+    color: #f1f1f1;
+    height: 100vh;
 }
+
+
 
 main {
-    flex-grow: 1;
-    padding-left: 20px;
+    width: 100%;
+    margin-left: 95px;
+    margin-top: 50px;
+    background-color: #36393f;
+    color: #e0e0e0;
+    
 }
 
+/* Cartões do conteúdo */
+.card {
+    width: 100%;
+    background-color: #40444b; /* fundo dos cards */
+    color: #f1f1f1;
+    border: none;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+}
 
+.btn-ver-mais {
+    background-color:#aa6715;
+    border: none;
+    color: #dbdbdb;
+}
+
+/* Input e botão de busca no header */
+header input.form-control {
+    background-color: #4c4f54;
+    color: #8f8b8b;
+    border: 1px solid #666;
+}
+
+header input.form-control::placeholder {
+    color: #bbb;
+}
+
+header .btn-outline-dark {
+    border-color: #ccc;
+    color: #f1f1f1;
+}
+
+header .btn-outline-dark:hover {
+    background-color: #19a54f;
+    color: white;
+}
+
+/* Responsivo */
 @media (max-width: 768px) {
     body {
-        flex-direction: column; /* Header, Menu e Conteúdo em coluna */
+        flex-direction: column;
     }
+
     #main-container {
-        flex-direction: column; /* Menu acima do conteúdo */
+        flex-direction: column;
     }
+
     nav {
         width: 100%;
         height: auto;
+        position: static;
+        margin-top: 0;
     }
+
     main {
         padding-left: 0;
+        margin-left: 0;
         margin-top: 20px;
     }
 }
